# wallpicker

./: .SRCINFO  .coverage  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PKGBUILD  README.md  install.sh  launcher.py  launcher.sh  main.py  pyproject.toml  requirements.txt  wallpicker  wallpicker.desktop
aur/: .SRCINFO  PKGBUILD
data/: config.json  style.css
docs/: features.md
src/: __init__.py
src/core/: asyncio_integration.py  container.py
src/domain/: __init__.py  config.py  exceptions.py  favorite.py  wallpaper.py
src/services/: AGENTS.md  banner_service.py  base.py  config_service.py  config_service_refactored.py  favorites_service.py  favorites_service_refactored.py  interfaces.py  local_service.py  notification_service.py  tag_generation.py  tag_storage.py  thumbnail_cache.py  thumbnail_cache_refactored.py  thumbnail_loader.py  toast_service.py  wallhaven_service.py  wallhaven_service_refactored.py  wallpaper_setter.py
src/ui/: main_window.py
src/ui/components/: adaptive_layout.py  preview_dialog.py  search_filter_bar.py  shortcuts_dialog.py  status_page.py  wallpaper_card.py
src/ui/view_models/: base.py  favorites_view_model.py  favorites_viewmodel.py  local_view_model.py  local_viewmodel.py  wallhaven_view_model.py  wallhaven_viewmodel.py
src/ui/views/: favorites_view.py  local_view.py  wallhaven_view.py
tasks/subtasks/wallpaper-refactor/: 01-package-structure.md  02-domain-models.md  03-service-layer.md  04-ui-architecture.md  05-async-refactor.md  06-error-handling.md  07-testing-refactor.md  08-type-safety.md  09-logging.md  10-code-quality.md  objective.md
tests/: conftest.py  run_tests.py
tests/core/: test_container.py
tests/domain/: test_config.py  test_exceptions.py  test_favorite.py  test_wallpaper.py
tests/services/: test_config_service.py  test_favorites_service.py  test_local_service.py  test_wallhaven_service.py  test_wallpaper_setter.py
tests/ui/: conftest.py  test_adaptive_layout.py  test_favorites_view_model.py  test_keyboard_navigation.py  test_local_view_model.py  test_touch_gestures.py  test_wallhaven_view_model.py
